<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/iiitlogodownload"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/sem1pic"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/success" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/sem1"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/sem1pic"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/success2" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/physics_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:onClick="DisplayLal"
                    android:text="@string/Physics"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/lal_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:onClick="DisplayLal"
                    android:text="@string/Lal"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/itp_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:onClick="DisplayLal"
                    android:text="@string/itp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/fee_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:onClick="DisplayLal"
                    android:text="@string/FEE"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/pfc_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:onClick="DisplayLal"
                    android:text="@string/pfc"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/pom_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:onClick="DisplayLal"
                    android:text="@string/POm"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>