<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearAlgebraActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/iiitlogodownload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/Study"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="#FF9800"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/imageButton40"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/newbook" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/books"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="#FF9800"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/imageButton41"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/notes" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/Notes"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="#FF9800"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/imageButton47"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/lecture" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView49"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/Youtube"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="#FF9800"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/imageButton4"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/questions" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/Questions"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>